# twitchchat-rust

./: Cargo.toml  test_messages.txt
src/: main.rs
src/chat/: clear_chat.rs  command.rs  error.rs  global_user_state.rs  message.rs  mod.rs  priv_msg.rs  raid.rs  room_state.rs  sub_gift.rs  sub_plan.rs  user_notice.rs  user_notice_type.rs
src/lib/: chat_connection.rs  lib.rs
src/lib/chat/: badge.rs  command.rs  emote.rs  message.rs  priv_msg.rs  room_state.rs  sub.rs  user_notice.rs  user_state.rs  user_type.rs
